Creación de la clase main